--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Blockipedia</h1>
+<p>Blockipedia is a site like wikipedia, you can create, view and  update your wikis!</p>
+<% unless user_signed_in? %>
+<%= link_to "Sign Up", edit_user_registration_path, class: 'btn btn-primary' %>
+<% end %>
