--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,12 @@
         <%= link_to "Home", welcome_index_path %>
         <%= link_to "About", welcome_about_path %>
         <% if user_signed_in? %>
-          Signed in as: <strong><%= current_user.email %></strong> |
-          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link pull-right' %>
+          <span class="pull-right">-</span>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link pull-right'  %>
+          <span class="pull-right">|</span>
+          <strong class = "pull-right"><%= link_to current_user.email, :class => 'navbar-link' %></strong>
+
         <% else %>
           <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
           <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
